--- a/foundation-studies.html
+++ b/foundation-studies.html
@@ -669,7 +669,7 @@
                                         </div>
                                         <div class="gdlr-core-event-item-holder clearfix">
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20 gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
                                                             width="900" height="500" alt="" /></a>
@@ -696,15 +696,36 @@
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
                                                     <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Learning To
-                                                            Study</a></h3>
+                                                            href="#">Drawing And Sketching</a></h3>
                                                     <p class="font-css">
-                                                        The aim of this module is to help students
-                                                        discover themselves to be more prepared
-                                                        for success in their future studies, and one of
-                                                        the main objectives of this module is to help
-                                                        students determine their field of study.
-
+                                                        The aim of this module is to develop a student’s
+                                                        observation, black and white pencildrawing
+                                                        and sketching skills. The module is intended for
+                                                        a beginner who has little or no drawing and
+                                                        sketching skills. Students will gain a working
+                                                        knowledge of form, space, shape,light, texture,
+                                                        line, proportion, perspective,volume and
+                                                        composition.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
+                                                <div class="gdlr-core-event-item-thumbnail">
+                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
+                                                            width="900" height="500" alt="" /></a>
+                                                </div>
+                                                <div class="gdlr-core-event-item-content-wrap">
+                                                    <h3 class="gdlr-core-event-item-title titles-css"><a href="#">Art
+                                                            History</a></h3>
+                                                    <p class="font-css">
+                                                        The objective of this module is to introduce
+                                                        students to art, its expression in human history,
+                                                        and its significance in human development.
+                                                        The course will cover the history of art from
+                                                        the ancient world of contemporary art. The
+                                                        major periods of art history and art styles will
+                                                        be studied and discussed.
                                                     </p>
                                                 </div>
                                             </div>
@@ -716,34 +737,13 @@
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
                                                     <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Learning To
-                                                            Study</a></h3>
+                                                            href="#">Mathematics For Designer
+                                                        </a></h3>
                                                     <p class="font-css">
-                                                        The aim of this module is to help students
-                                                        discover themselves to be more prepared
-                                                        for success in their future studies, and one of
-                                                        the main objectives of this module is to help
-                                                        students determine their field of study.
-
-                                                    </p>
-                                                </div>
-                                            </div>
-                                            <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20 gdlr-core-column-first  clearfix">
-                                                <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
-                                                            width="900" height="500" alt="" /></a>
-                                                </div>
-                                                <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Learning To
-                                                            Study</a></h3>
-                                                    <p class="font-css">
-                                                        The aim of this module is to help students
-                                                        discover themselves to be more prepared
-                                                        for success in their future studies, and one of
-                                                        the main objectives of this module is to help
-                                                        students determine their field of study.
+                                                        The objective of this module is to develop the
+                                                        student’s ability to reason with and apply
+                                                        simple mathematical concepts and formulas
+                                                        in a business environment.
                                                     </p>
                                                 </div>
                                             </div>
@@ -762,8 +762,7 @@
                             <h2>GET IN TOUCH WITH US NOW<br>
                                 TO SEE HOW WE CAN HELP!
                             </h2>
-                            <form id="contact" name="contact"
-                                action="https://formspree.io/f/xlekpaev" method="post">
+                            <form id="contact" name="contact" action="" method="post">
                                 <input type="email" name="email" id="email" required
                                     placeholder="Type your e-mail address">
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
@@ -774,7 +773,7 @@
             </section>
             <!-- end subscription-block -->
 
-            
+
 
 
             <footer>
@@ -783,39 +782,19 @@
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
                             <div id="text-2" class="widget widget_text kingster-widget">
                                 <div class="textwidget">
-                                    <p><img src="upload/footer-logo.png" alt="" />
-                                        <br /> <span class="gdlr-core-space-shortcode" style="margin-top: 5px ;"></span>
-                                        <br /> Box 35300
-                                        <br /> 1810 Campus Way NE
-                                        <br /> Bothell, WA 98011-8246
-                                    </p>
-                                    <p><span style="font-size: 15px; color: #ffffff;">+1-2534-4456-345</span>
-                                        <br /> <span class="gdlr-core-space-shortcode"
-                                            style="margin-top: -20px ;"></span>
-                                        <br /> <a style="font-size: 15px; color: #ffffff;"
-                                            href="mailto:admin@kingsteruni.edu">admin@kingsteruni.edu</a>
-                                    </p>
-                                    <div
-                                        class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-left-align">
-                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider"
-                                            style="border-color: #3db166 ;border-bottom-width: 2px ;"></div>
-                                    </div>
+                                    <p><img src="img/raffles-logo3-01.png" alt="" /></p>
                                 </div>
                             </div>
                         </div>
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
                             <div id="gdlr-core-custom-menu-widget-2"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Our Campus</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title">Email</h3><span class="clear"></span>
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus"
-                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item"><a href="#">Acedemic</a></li>
-                                        <li class="menu-item"><a href="#">Planning &#038; Administration</a></li>
-                                        <li class="menu-item"><a href="#">Campus Safety</a></li>
-                                        <li class="menu-item"><a href="#">Office of the Chancellor</a></li>
-                                        <li class="menu-item"><a href="#">Facility Services</a></li>
-                                        <li class="menu-item"><a href="#">Human Resources</a></li>
+                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
+                                        <li class="menu-item"><a href="#">Info@raffles-me.com</a></li>
+                                        <li class="menu-item"><a href="#">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -823,16 +802,13 @@
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
                             <div id="gdlr-core-custom-menu-widget-3"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Campus Life</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title">Our Numbers</h3><span class="clear"></span>
                                 <div class="menu-campus-life-container">
                                     <ul id="menu-campus-life"
-                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item"><a href="#">Accessibility</a></li>
-                                        <li class="menu-item"><a href="#">Financial Aid</a></li>
-                                        <li class="menu-item"><a href="#">Food Services</a></li>
-                                        <li class="menu-item"><a href="#">Housing</a></li>
-                                        <li class="menu-item"><a href="#">Information Technologies</a></li>
-                                        <li class="menu-item"><a href="#">Student Life</a></li>
+                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
+                                        <li class="menu-item"><a href="#">+966 55 011 1719</a></li>
+                                        <li class="menu-item"><a href="#">+966 55 299 5509</a></li>
+
                                     </ul>
                                 </div>
                             </div>
@@ -840,16 +816,13 @@
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
                             <div id="gdlr-core-custom-menu-widget-4"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Academics</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title">Find Us At</h3><span class="clear"></span>
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics"
-                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item"><a href="#">Canvas</a></li>
-                                        <li class="menu-item"><a href="#">Catalyst</a></li>
-                                        <li class="menu-item"><a href="#">Library</a></li>
-                                        <li class="menu-item"><a href="#">Time Schedule</a></li>
-                                        <li class="menu-item"><a href="#">Apply For Admissions</a></li>
-                                        <li class="menu-item"><a href="#">Pay My Tuition</a></li>
+                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
+                                        <li class="menu-item"><a href="#">Office No.25, Home Offices,
+                                                Turki Bin Abdulaziz st 11454
+                                                Riyadh, Saaudi Arabia</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -859,8 +832,8 @@
 
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
-                        <div class="kingster-copyright-left kingster-item-pdlr">Copyright All Right Reserved 2019, Max
-                            Themes</div>
+                        <div class="kingster-copyright-left kingster-item-pdlr">© 2023 Raffles Design Institue. All
+                            Rights Reserved To <a href="khpmarketingagency.com">KHP Marketing Agency</a></div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                 style="padding-bottom: 0px ;">
