--- a/about-us-ar.html
+++ b/about-us-ar.html
@@ -97,7 +97,7 @@
                 <div class="kingster-header-background"></div>
                 <div class="kingster-header-container  kingster-container">
                     <div class="kingster-header-container-inner clearfix">
-                        <div class="kingster-logo  kingster-item-pdlr pbtm">
+                        <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
                                 <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
@@ -294,19 +294,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="kingster-breadcrumbs">
-                <div class="kingster-breadcrumbs-container kingster-container">
-                    <div class="kingster-breadcrumbs-item kingster-item-pdlr"> <span property="itemListElement"
-                            typeof="ListItem"><a property="item" typeof="WebPage" title="Go to Kingster."
-                                href="home.html" class="home"><span property="name">Home</span></a>
-                            <meta property="position" content="1">
-                        </span>&gt;<span property="itemListElement" typeof="ListItem"><span property="name">About
-                                Us</span>
-                            <meta property="position" content="2">
-                        </span>
-                    </div>
-                </div>
-            </div> -->
             <div class="kingster-page-wrapper" id="kingster-page-wrapper">
                 <div class="gdlr-core-page-builder-body">
                     <div class="gdlr-core-pbf-wrapper " id="div_983a_3">
@@ -330,9 +317,10 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_4">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font dr-font"
                                                             data-aos="fade-left" data-aos-duration="500"
-                                                            data-aos-delay="200" id="h3_983a_0">Dr. Wafa AlRushaid</h3>
+                                                            data-aos-delay="200" id="h3_983a_0">د/ وفــاء الــرشــود
+                                                        </h3>
                                                     </div>
                                                 </div>
                                             </div>
@@ -340,7 +328,7 @@
                                                 <div
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align">
                                                     <div class="gdlr-core-divider-container" id="div_983a_5">
-                                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider"
+                                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider abt-mrg"
                                                             data-aos="fade-left" data-aos-duration="500"
                                                             data-aos-delay="200" id="div_983a_6"></div>
                                                     </div>
@@ -352,20 +340,19 @@
                                                     <div class="gdlr-core-text-box-item-content" id="div_983a_8"
                                                         data-aos="fade-left" data-aos-duration="500"
                                                         data-aos-delay="300">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-                                                            id="h3_983a_22">Cheif Executive Officer</h3>
-                                                        <p class="p-about">PhD Holder from The American Graduate School
-                                                            of
-                                                            International Relations and Diplomacy in Paris,
-                                                            France, she pursued courses at Harvard University,
-                                                            MIT University, the London School of Economics,
-                                                            Oxford University, and more. She has since then, she has
-                                                            been participating in innumerable events, conferences,
-                                                            forums, and discussion panels.</p>
-                                                        <p class="p-about">Dr. Wafa has also held a wide variety of
-                                                            strategically and socially prominent memberships
-                                                            and associations in think tanks, local Saudi
-                                                            ministries, and the United Nations.</p>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font dr-font2"
+                                                            id="h3_983a_22">الـرئـيـس الـتـنـفـيـذي</h3>
+                                                        <p class="p-about ar-float ar-font">حاصلة على درجة الدكتوراه من كلية
+                                                            الدراسات
+                                                            العليا الأمريكية للعلاقات الدولية والدبلوماسية في باريس،
+                                                            فرنسا وتابعت دوراتها الدراسـيـة في جامـعـة هـارفــارد وجامعةMIT
+                                                            وكلية لندن للاقتصاد وجامعة أكسفورد، وأكثر من ذلـك.
+                                                            منذ ذلك <br>الحين، شاركت في عدد لا يحصى من الأحداث والمؤتمـرات
+                                                            والمنتديـات والنـدوات.</p>
+                                                        <p class="p-about ar-float ar-font">وقد حصلت <b>الـدكـتـورة وفــاء</b> أيضاً على
+                                                            مجموعة متنوعــة من العضويــات في <br>الجمعـيـــات البارزة على الصعيدين
+                                                            الاسـتـراتـيـجـي والاجتماعي في مراكـز الفكـر<br> والوزارات السعودية
+                                                            المحلية والأمم المتحدة.</p>
                                                     </div>
                                                 </div>
                                             </div>
